# livekit-plugins-smallest

./: README.md  pyproject.toml
livekit/plugins/smallest/: __init__.py  log.py  models.py  tts.py
livekit/plugins/smallestai/: tts.py  version.py
