# pyproject.toml for your "smallest" plugin

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-smallest"
dynamic = ["version"]
description = "Agent Framework plugin for voice synthesis with Smallest AI's API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "Tanmay", email = "your-email@example.com" }] # Change this!
keywords = ["webrtc", "realtime", "audio", "video", "livekit", "smallest-ai"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
# THIS IS THE MOST IMPORTANT LINE
dependencies = ["livekit-agents[codecs]>=1.1.0"]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://livekit.io/"

[tool.hatch.version]
# This tells hatch to find the version in this file
# You will need to create this file
path = "livekit/plugins/smallest/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]